--- a/src/sass/layout/_product.scss
+++ b/src/sass/layout/_product.scss
@@ -50,7 +50,7 @@ $productName: #333333;
         &:hover {
             text-decoration: none;
         }
-        &.active {
+        &.activeted {
             color: #000;
             text-decoration: underline;
             background-color: unset;
